# reuler

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml
.github/workflows/: auto_publish.yaml  build.yaml
src/: lib.rs  main.rs  utils.rs
src/problems/: mod.rs  prob_1.rs  prob_10.rs  prob_11.rs  prob_12.rs  prob_13.rs  prob_14.rs  prob_15.rs  prob_16.rs  prob_17.rs  prob_18.rs  prob_19.rs  prob_2.rs  prob_20.rs  prob_21.rs  prob_22.rs  prob_23.rs  prob_24.rs  prob_25.rs  prob_26.rs  prob_27.rs  prob_28.rs  prob_29.rs  prob_3.rs  prob_30.rs  prob_31.rs  prob_32.rs  prob_33.rs  prob_34.rs  prob_35.rs  prob_36.rs  prob_37.rs  prob_38.rs  prob_39.rs  prob_4.rs  prob_40.rs  prob_41.rs  prob_42.rs  prob_43.rs  prob_44.rs  (+21 more)
tests/: integration_tests.rs
